scripts/nullness/original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8.txt
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/Main.java:89: error: [initialization.field.uninitialized] the default constructor does not initialize field datiqingkuang
		public List<Integer> datiqingkuang;
		                     ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:80: error: [unboxing.of.nullable] unboxing a possibly-null reference var.get(key)
		return var.get(key);
		              ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/singleton/Singleton_doublecheck.java:5: error: [assignment] incompatible types in assignment.
	private static volatile Singleton_doublecheck instance = null;
	                                                         ^
  found   : null (NullType)
  required: @Initialized @NonNull Singleton_doublecheck
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: purchase, sale, stock
	public AbstractMediator()
	       ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/factory/simplefactory/Simplefactory1.java:15: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull onSender
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/responsechain/ResponsechainTest.java:67: error: [initialization.fields.uninitialized] the constructor does not initialize fields: next
	protected ChainHandler(int maxNum)
	          ^
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:19: error: [initialization.static.field.uninitialized] static field currentLiftState not initialized
	public static ILiftState currentLiftState;
	                         ^
Note: ../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/observe/ObserveTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
7 errors
